# gorobots_edu

./: .gitignore  README  README.md  simulation.makefile
docs/: README  gorobots_lpzrobots_guide.txt
docs/install_manual/: .gitignore  Install_Manual.tex  README
docs/install_manual/Sections/: FAQ.tex  (+2 more)
docs/install_script/: README
examples/localization_mapping/: manual.tex
examples/opencv/: README  opencv.sh
practices/adaptive_locomotion_control_course/: README
practices/adaptive_locomotion_control_course/Course_environment/Projects/Slalom/catkin_ws/src/gecko_controller/: CMakeLists.txt  package.xml
practices/adaptive_locomotion_control_course/Course_environment/Projects/Slalom/catkin_ws/src/keyboard/: CMakeLists.txt  package.xml
practices/amosii/: Complete_control_solution.h  Makefile.conf  Task1_CPG_control_empty.h  Task1_CPG_control_solution.h  Task1_CPG_control_solution_lorenz.h  Task2_CPG_VRN_control_empty.h  Task2_CPG_VRN_control_solution.h  Task3_CPG_VRN_MRC_control_empty.h  Task3_CPG_VRN_MRC_control_solution.h  Task4_CPG_VRN_MRC_ICO_control_empty.h  Task4_CPG_VRN_MRC_ICO_control_solution.h  Task4_CPG_VRN_MRC_ICO_control_solution_lorenz_exploration.h  Task5_CPG_VRN_MRC_ICO_Hormone_control_empty.h  Task5_CPG_VRN_MRC_ICO_Hormone_control_solution.h  Task6_CPG_VRN_MRC_ICO_DecoupledCPGs_control_empty.h  Task6_CPG_VRN_MRC_ICO_DecoupledCPGs_control_solution.h  emptycontroller.h  guilogger.cfg  main.cpp  ode.msg  samplecontroller.h
practices/backpropagation_xnor/: Makefile.conf  Serial.cpp  Serial.h  ann_xnor.cpp  ann_xnor.h  error.txt  main.cpp
practices/ludo/: README
practices/nimm4ii/: ICOlearningcurve.txt  Makefile.conf  emptycontroller.h  emptycontroller_icolearning.h  main.cpp  ode.msg  samplecontroller.h
practices/pole_balancing_2d/: Makefile.conf  anim.c  cart_pole.c  cart_pole.h
practices/robotarm/: Makefile.conf  README  amosII.h  main.cpp
practices/springy_bot/: Makefile.conf  SpringyBotEmptyController.cpp  SpringyBotEmptyController.h  SpringyBotSimulation.cpp  SpringyBotSimulation.h  footcontacts.csv  main.cpp
projects/lilibot/: README.md
projects/pendulum/: .README.swp  README  pendulum.lua
projects/pendulum/catkin_ws/src/pendulum_controller/: CMakeLists.txt  mainpage.dox  package.xml
utils/: README  delayline.cpp
utils/ann-framework/: ann.cpp  ann.h  neuron.cpp  neuron.h  synapse.cpp  synapse.h  transferfunction.h
utils/ann-library/: pmn.h
utils/dmp-framework/: dmp.cpp  dmp.h
utils/ea-framework/: ea.cpp  ea.doxyfile  ea.h
utils/esn-framework/: RC_manual.doc  networkmatrix.cpp  networkmatrix.h
utils/ga-mpi/: GA1DArrayGenome.C  GA2DArrayGenome.C  GA3DArrayGenome.C  GADemeGA.C  GAIncGA.C  GASStateGA.C  README.md  makefile  makevars
utils/ico-framework/: ICO_manual.doc  ico.cpp  ico.doxyfile  ico.h
utils/rbf-framework/: RBF_manual.doc  ngnet.cpp  ngnet.h
utils/slam-library/: SLAMSolver.cpp  SLAMSolver.h  grid.h  log  particle.h  rangeFinder.cpp  rangeFinder.h  scanMatcher.cpp  scanMatcher.h  tools.cpp  tools.h
utils/vaam-library/: abstractmusclemodel.cpp  abstractmusclemodel.h  dccontrollingvmm.cpp  dccontrollingvmm.h  musclechain.cpp  musclechain.h  muscletorque1.cpp  muscletorque1.h  muscletorquefunction.h  parametertransitionfunction.cpp  parametertransitionfunction.h  positioncontrollingvmm.cpp  positioncontrollingvmm.h  sigmoidtransitionfunction.cpp  sigmoidtransitionfunction.h
(+678 files in other folders)
