<package>
  <name>pendulum_controller</name>
  <description>pendulum_controller node for VREP</description>
  <maintainer email="mathias@mmmi.sdu.dk">Mathias</maintainer>
  <version>0.0.1</version>
  <author>Mathias</author>
  <license>GPLv3</license>
  <url>http://www.sdu.dk</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>roscpp</run_depend>
</package>
